User demo, create activities

--- a/Nativo/frontend/src/app/main/header/header.component.html
+++ b/Nativo/frontend/src/app/main/header/header.component.html
@@ -22,7 +22,7 @@
                 <span class="badge badge-danger navbar-badge"></span>
             </a>
             <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
-                <a href="pages/demo/demo.html" class="dropdown-item">
+                <a [routerLink]="['/createact']" class="dropdown-item">
                     <!-- Message Start -->
                     <div class="media">
                         <img src="assets/dist/img/user-demo.png" alt="User Avatar" class="img-size-50 mr-3 img-circle">
@@ -39,7 +39,5 @@
                 </a>
             </div>
         </li>
-        <!-- Notifications Dropdown Menu -->
-
     </ul>
 </nav>
