--- a/Nativo/frontend/src/app/pages/weeklyactivities/weeklyactivities.component.html
+++ b/Nativo/frontend/src/app/pages/weeklyactivities/weeklyactivities.component.html
@@ -1,128 +1,127 @@
 <!-- Content Header (Page header) -->
 <div class="content-header">
-    <div class="container-fluid">
-        <div class="row mb-2">
-            <div class="col-sm-6">
-                <h1 class="m-0 text-dark">Weekly Activities</h1>
-            </div><!-- /.col -->
-            <div class="col-sm-6">
-                <ol class="breadcrumb float-sm-right">
-                    <li class="breadcrumb-item"><a [routerLink]="['/']">Home</a> /weekly activities</li>
-                </ol>
-            </div><!-- /.col -->
-        </div><!-- /.row -->
-    </div><!-- /.container-fluid -->
+  <div class="container-fluid">
+    <div class="row mb-2">
+      <div class="col-sm-6">
+        <h1 class="m-0 text-dark">Weekly Activities</h1>
+      </div>
+      <!-- /.col -->
+      <div class="col-sm-6">
+        <ol class="breadcrumb float-sm-right">
+          <li class="breadcrumb-item">
+            <a [routerLink]="['/']">Home</a> /weekly activities
+          </li>
+        </ol>
+      </div>
+      <!-- /.col -->
+    </div>
+    <!-- /.row -->
+  </div>
+  <!-- /.container-fluid -->
 </div>
 <!-- /.content-header -->
 
 <!-- Main content -->
 <div class="content">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-12">
-                <h4></h4>
-            </div>
-        </div>
-        <!-- ./row -->
-        <div class="row">
-            <div class="col-12 col-sm-12">
-                <div class="card card-primary card-tabs">
-                    <div class="card-header p-0 pt-1">
-                        <ul class="nav nav-tabs" id="custom-tabs-one-tab" role="tablist">
-                            <li class="nav-item">
-                                <a class="nav-link active" id="custom-tabs-one-home-tab" data-toggle="pill"
-                                    href="#custom-tabs-one-home" role="tab" aria-controls="custom-tabs-one-home"
-                                    aria-selected="true">Activity 1</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" id="custom-tabs-one-profile-tab" data-toggle="pill"
-                                    href="#custom-tabs-one-profile" role="tab" aria-controls="custom-tabs-one-profile"
-                                    aria-selected="false">Activity 2</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" id="custom-tabs-one-messages-tab" data-toggle="pill"
-                                    href="#custom-tabs-one-messages" role="tab" aria-controls="custom-tabs-one-messages"
-                                    aria-selected="false">Activity 3</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" id="custom-tabs-one-settings-tab" data-toggle="pill"
-                                    href="#custom-tabs-one-settings" role="tab" aria-controls="custom-tabs-one-settings"
-                                    aria-selected="false">Activity 4</a>
-                            </li>
-                        </ul>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-12">
+        <h4></h4>
+      </div>
+    </div>
+    <!-- ./row -->
+    <div class="row">
+      <div class="col-12 col-sm-12">
+        <div class="card card-primary card-tabs">
+          <div class="card-header p-0 pt-1">
+            <ul class="nav nav-tabs" id="custom-tabs-one-tab" role="tablist">
+              <li class="nav-item">
+                <a
+                  class="nav-link active"
+                  id="custom-tabs-one-home-tab"
+                  data-toggle="pill"
+                  href="#custom-tabs-one-home"
+                  role="tab"
+                  aria-controls="custom-tabs-one-home"
+                  aria-selected="true"
+                  >Activities</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="card-body">
+            <div class="tab-content" id="custom-tabs-one-tabContent">
+              <div
+                class="tab-pane fade show active"
+                id="custom-tabs-one-home"
+                role="tabpanel"
+                aria-labelledby="custom-tabs-one-home-tab"
+              >
+                <div
+                  style="float: left;"
+                  class="col-md-4"
+                  *ngFor="let activities of activities"
+                >
+                  <!-- Widget: user widget style 2 -->
+                  <div class="card card-widget widget-user-2">
+                    <!-- Add the bg color to the header using any of the bg-* classes -->
+                    <div class="widget-user-header bg-warning">
+                      <div class="widget-user-image">
+                        <img class="img-circle elevation-2"
+                          src="{{ url + 'getimgact/' + activities.image }}"
+                          *ngIf="activities.image"
+                        />
+                      </div>
+                      <!-- /.widget-user-image -->
+                      <h3 class="widget-user-username">
+                        {{ activities.company }}
+                      </h3>
+                      <h5 class="widget-user-desc">{{ activities.title }}</h5>
                     </div>
-                    <div class="card-body">
-                        <div class="tab-content" id="custom-tabs-one-tabContent">
-                            <div class="tab-pane fade show active" id="custom-tabs-one-home" role="tabpanel"
-                                aria-labelledby="custom-tabs-one-home-tab">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin malesuada lacus
-                                ullamcorper dui
-                                molestie, sit amet congue quam finibus. Etiam ultricies nunc non magna feugiat
-                                commodo. Etiam odio
-                                magna, mollis auctor felis vitae, ullamcorper ornare ligula. Proin pellentesque
-                                tincidunt nisi,
-                                vitae ullamcorper felis aliquam id. Pellentesque habitant morbi tristique senectus
-                                et netus et
-                                malesuada fames ac turpis egestas. Proin id orci eu lectus blandit suscipit.
-                                Phasellus porta, ante
-                                et varius ornare, sem enim sollicitudin eros, at commodo leo est vitae lacus. Etiam
-                                ut porta sem.
-                                Proin porttitor porta nisl, id tempor risus rhoncus quis. In in quam a nibh cursus
-                                pulvinar non
-                                consequat neque. Mauris lacus elit, condimentum ac condimentum at, semper vitae
-                                lectus. Cras
-                                lacinia erat eget sapien porta consectetur.
-                            </div>
-                            <div class="tab-pane fade" id="custom-tabs-one-profile" role="tabpanel"
-                                aria-labelledby="custom-tabs-one-profile-tab">
-                                Mauris tincidunt mi at erat gravida, eget tristique urna bibendum. Mauris pharetra
-                                purus ut ligula
-                                tempor, et vulputate metus facilisis. Lorem ipsum dolor sit amet, consectetur
-                                adipiscing elit.
-                                Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
-                                Curae; Maecenas
-                                sollicitudin, nisi a luctus interdum, nisl ligula placerat mi, quis posuere purus
-                                ligula eu
-                                lectus. Donec nunc tellus, elementum sit amet ultricies at, posuere nec nunc. Nunc
-                                euismod
-                                pellentesque diam.
-                            </div>
-                            <div class="tab-pane fade" id="custom-tabs-one-messages" role="tabpanel"
-                                aria-labelledby="custom-tabs-one-messages-tab">
-                                Morbi turpis dolor, vulputate vitae felis non, tincidunt congue mauris. Phasellus
-                                volutpat augue
-                                id mi placerat mollis. Vivamus faucibus eu massa eget condimentum. Fusce nec
-                                hendrerit sem, ac
-                                tristique nulla. Integer vestibulum orci odio. Cras nec augue ipsum. Suspendisse ut
-                                velit
-                                condimentum, mattis urna a, malesuada nunc. Curabitur eleifend facilisis velit
-                                finibus tristique.
-                                Nam vulputate, eros non luctus efficitur, ipsum odio volutpat massa, sit amet
-                                sollicitudin est
-                                libero sed ipsum. Nulla lacinia, ex vitae gravida fermentum, lectus ipsum gravida
-                                arcu, id
-                                fermentum metus arcu vel metus. Curabitur eget sem eu risus tincidunt eleifend ac
-                                ornare magna.
-                            </div>
-                            <div class="tab-pane fade" id="custom-tabs-one-settings" role="tabpanel"
-                                aria-labelledby="custom-tabs-one-settings-tab">
-                                Pellentesque vestibulum commodo nibh nec blandit. Maecenas neque magna, iaculis
-                                tempus turpis ac,
-                                ornare sodales tellus. Mauris eget blandit dolor. Quisque tincidunt venenatis
-                                vulputate. Morbi
-                                euismod molestie tristique. Vestibulum consectetur dolor a vestibulum pharetra.
-                                Donec interdum
-                                placerat urna nec pharetra. Etiam eget dapibus orci, eget aliquet urna. Nunc at
-                                consequat diam.
-                                Nunc et felis ut nisl commodo dignissim. In hac habitasse platea dictumst. Praesent
-                                imperdiet
-                                accumsan ex sit amet facilisis.
-                            </div>
-                        </div>
+                    <div class="card-footer p-0">
+                      <ul class="nav flex-column">
+                        <li class="nav-item">
+                          <a style="color: rgb(15, 120, 206);" class="nav-link">
+                            Creation date
+                            <span class="float-right badge bg-primary">{{
+                              activities.date
+                            }}</span>
+                          </a>
+                        </li>
+                        <li class="nav-item">
+                          <a style="color: rgb(15, 120, 206);" class="nav-link">
+                            Questions
+                            <span class="float-right badge bg-info">5</span>
+                          </a>
+                        </li>
+                        <li class="nav-item">
+                          <a style="color: rgb(15, 120, 206);" class="nav-link">
+                            By
+                            <span class="float-right badge bg-success"
+                              >Demo user</span
+                            >
+                          </a>
+                        </li>
+                        <li class="nav-item">
+                          <a style="color: rgb(15, 120, 206);" class="nav-link">
+                            Priority
+                            <span class="float-right badge bg-danger"
+                              >High</span
+                            >
+                          </a>
+                        </li>
+                      </ul>
                     </div>
+                  </div>
+                  <!-- /.widget-user -->
                 </div>
+              </div>
             </div>
+          </div>
         </div>
-    </div><!-- /.container-fluid -->
+      </div>
+    </div>
+    <!-- /.container-fluid -->
+  </div>
+  <!-- /.content -->
 </div>
-<!-- /.content -->
