--- a/Nativo/frontend/src/app/pages/weeklyactivities/weeklyactivities.component.html
+++ b/Nativo/frontend/src/app/pages/weeklyactivities/weeklyactivities.component.html
@@ -90,15 +90,15 @@
                         </li>
                         <li class="nav-item">
                           <a style="color: rgb(15, 120, 206);" class="nav-link">
-                            Questions
-                            <span class="float-right badge bg-info">5</span>
+                            Number activities
+                            <span class="float-right badge bg-info">{{activities.numActivities}}</span>
                           </a>
                         </li>
                         <li class="nav-item">
                           <a style="color: rgb(15, 120, 206);" class="nav-link">
                             By
                             <span class="float-right badge bg-success"
-                              >Demo user</span
+                              >{{activities.tutor}}</span
                             >
                           </a>
                         </li>
