--- a/Nativo/frontend/src/app/main/menu/menu.component.html
+++ b/Nativo/frontend/src/app/main/menu/menu.component.html
@@ -1,3 +1,4 @@
+
 <!-- Menu navigation -->
 <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
@@ -11,10 +12,10 @@
         <!-- Sidebar user panel (optional) -->
         <div class="user-panel mt-3 pb-3 mb-3 d-flex">
             <div class="image">
-                <img src="assets/dist/img/user-mauricio.jpeg" class="img-circle elevation-2" alt="User Image">
+                <img src="assets/dist/img/user1-128x128.jpg" class="img-circle elevation-2" alt="User Image">
             </div>
             <div class="info">
-                <a href="#" class="d-block">Mauricio Drada</a>
+                <a [routerLink]="['/profile']" class="d-block">Demo user</a>
             </div>
         </div>
         <!-- Sidebar Menu -->
