--- a/Nativo/frontend/src/app/pages/home/home.component.html
+++ b/Nativo/frontend/src/app/pages/home/home.component.html
@@ -1,157 +1,1 @@
-<!-- Content Header (Page header) -->
-<section class="content-header">
-    <div class="container-fluid">
-        <div class="row mb-2">
-            <div class="col-sm-6">
-                <h1>Home</h1>
-            </div>
-            <div class="col-sm-6">
-                <ol class="breadcrumb float-sm-right">
-                    <li class="breadcrumb-item"><a href="#">Home</a> /profile</li>
-
-                </ol>
-            </div>
-        </div>
-    </div><!-- /.container-fluid -->
-</section>
-
-<!-- Main content -->
-<section class="content">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-3">
-                <!-- Profile Image -->
-                <div class="card card-primary card-outline">
-                    <div class="card-body box-profile">
-                        <div class="text-center">
-                            <img class="profile-user-img img-fluid img-circle" src="assets/dist/img/user-mauricio.jpeg"
-                                alt="User profile picture">
-                        </div>
-                        <h3 class="profile-username text-center">Nina Mcintire</h3>
-                        <p class="text-muted text-center">Software Engineer</p>
-                        <ul class="list-group list-group-unbordered mb-3">
-                            <li class="list-group-item">
-                                <b>Followers</b> <a class="float-right">1,322</a>
-                            </li>
-                            <li class="list-group-item">
-                                <b>Following</b> <a class="float-right">543</a>
-                            </li>
-                            <li class="list-group-item">
-                                <b>Friends</b> <a class="float-right">13,287</a>
-                            </li>
-                        </ul>
-                        <a href="#" class="btn btn-primary btn-block"><b>Follow</b></a>
-                    </div>
-                    <!-- /.card-body -->
-                </div>
-                <!-- /.card -->
-                <!-- About Me Box -->
-                <div class="card card-primary">
-                    <div class="card-header">
-                        <h3 class="card-title">About Me</h3>
-                    </div>
-                    <!-- /.card-header -->
-                    <div class="card-body">
-                        <strong><i class="fas fa-book mr-1"></i> Education</strong>
-                        <p class="text-muted">
-                            B.S. in Computer Science from the University of Tennessee at Knoxville
-                        </p>
-                        <hr>
-                        <strong><i class="fas fa-map-marker-alt mr-1"></i> Location</strong>
-                        <p class="text-muted">Malibu, California</p>
-                        <hr>
-                        <strong><i class="fas fa-pencil-alt mr-1"></i> Skills</strong>
-                        <p class="text-muted">
-                            <span class="tag tag-danger">UI Design</span><br>
-                            <span class="tag tag-success">Coding</span><br>
-                            <span class="tag tag-info">Javascript</span><br>
-                            <span class="tag tag-warning">PHP</span><br>
-                            <span class="tag tag-primary">Node.js</span><br>
-                        </p>
-                        <hr>
-                        <strong><i class="far fa-file-alt mr-1"></i> Notes</strong>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam fermentum
-                            enim neque.</p>
-                    </div>
-                    <!-- /.card-body -->
-                </div>
-                <!-- /.card -->
-            </div>
-            <div class="col-md-9">
-                <div class="card">
-                    <div class="card-body">
-                        <div class="tab-content">
-                            <div class="active tab-pane" id="activity">
-                                <!-- Post -->
-                                <div class="post">
-                                    <!-- /.user-block -->
-                                    <p>
-                                        Lorem Ipsum
-                                        "Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur,
-                                        adipisci velit..."
-                                        "There is no one who loves pain itself, who seeks after it and wants to have it,
-                                        simply because it is pain..."
-                                        What is Lorem Ipsum?
-                                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                                        Ipsum has been the industry's standard dummy text ever since the 1500s, when an
-                                        unknown printer took a galley of type and scrambled it to make a type specimen
-                                        book. It has survived not only five centuries, but also the leap into electronic
-                                        typesetting, remaining essentially unchanged. It was popularised in the 1960s
-                                        with the release of Letraset sheets containing Lorem Ipsum passages, and more
-                                        recently with desktop publishing software like Aldus PageMaker including
-                                        versions of Lorem Ipsum.
-
-                                        Why do we use it?
-                                        It is a long established fact that a reader will be distracted by the readable
-                                        content of a page when looking at its layout. The point of using Lorem Ipsum is
-                                        that it has a more-or-less normal distribution of letters, as opposed to using
-                                        'Content here, content here', making it look like readable English. Many desktop
-                                        publishing packages and web page editors now use Lorem Ipsum as their default
-                                        model text, and a search for 'lorem ipsum' will uncover many web sites still in
-                                        their infancy. Various versions have evolved over the years, sometimes by
-                                        accident, sometimes on purpose (injected humour and the like).
-
-
-                                        Where does it come from?
-                                        Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots
-                                        in a piece of classical Latin literature from 45 BC, making it over 2000 years
-                                        old. Richard McClintock, a Latin professor at Hampden-Sydney College in
-                                        Virginia, looked up one of the more obscure Latin words, consectetur, from a
-                                        Lorem Ipsum passage, and going through the cites of the word in classical
-                                        literature, discovered the undoubtable source. Lorem Ipsum comes from sections
-                                        1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and
-                                        Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of
-                                        ethics, very popular during the Renaissance. The first line of Lorem Ipsum,
-                                        "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
-
-                                        The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for
-                                        those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et
-                                        Malorum" by Cicero are also reproduced in their exact original form, accompanied
-                                        by English versions from the 1914 translation by H. Rackham.
-
-                                        Where can I get some?
-                                        There are many variations of passages of Lorem Ipsum available, but the majority
-                                        have suffered alteration in some form, by injected humour, or randomised words
-                                        which don't look even slightly believable. If you are going to use a passage of
-                                        Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the
-                                        middle of text. All the Lorem Ipsum generators on the Internet tend to repeat
-                                        predefined chunks as necessary, making this the first true generator on the
-                                        Internet. It uses a dictionary of over 200 Latin words, combined with a handful
-                                        of model sentence structures, to generate Lorem Ipsum which looks reasonable.
-                                        The generated Lorem Ipsum is therefore always free from repetition, injected
-                                        humour, or non-characteristic words etc.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div><!-- /.card-body -->
-                </div>
-                <!-- /.nav-tabs-custom -->
-            </div>
-            <!-- /.col -->
-            <!-- /.col -->
-        </div>
-        <!-- /.row -->
-    </div><!-- /.container-fluid -->
-</section>
-<!-- /.content -->
+<H1>A espera de datos</H1>
