--- a/Nativo/frontend/src/styles.css
+++ b/Nativo/frontend/src/styles.css
@@ -1,8 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
- .content-wrapper .app-content.content {
-  padding: 0 .5rem;
+.content-wrapper .app-content.content {
+  padding: 0 0.5rem;
 }
 
 a + a {
   margin-left: 3px;
-} 
+}
+
+
