--- a/Nativo/frontend/src/app/pages/contact/contact.component.html
+++ b/Nativo/frontend/src/app/pages/contact/contact.component.html
@@ -44,7 +44,7 @@
                                     </ul>
                                 </div>
                                 <div class="col-5 text-center">
-                                    <img src="assets/dist/img/user-mauricio.jpeg" alt="" class="img-circle img-fluid">
+                                    <img src="../../../assets/dist/img/Mauricio_drada.jpeg" alt="" class="img-circle img-fluid">
                                 </div>
                             </div>
                         </div>
@@ -83,7 +83,7 @@
                                     </ul>
                                 </div>
                                 <div class="col-5 text-center">
-                                    <img src="assets/dist/img/user2-160x160.jpg" alt="" class="img-circle img-fluid">
+                                    <img src="../../../assets/dist/img/Samir_millan.jpg" alt="" class="img-circle img-fluid">
                                 </div>
                             </div>
                         </div>
@@ -121,7 +121,7 @@
                                     </ul>
                                 </div>
                                 <div class="col-5 text-center">
-                                    <img src="assets/dist/img/user - diego.jpg" alt="" class="img-circle img-fluid">
+                                    <img src="../../../assets/dist/img/Diego_Quijano.jpg" alt="" class="img-circle img-fluid">
                                 </div>
                             </div>
                         </div>
