--- a/Nativo/frontend/src/app/pages/landing/landing.component.html
+++ b/Nativo/frontend/src/app/pages/landing/landing.component.html
@@ -1,115 +1,360 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <!-- Theme Made By www.w3schools.com - No Copyright -->
-  <title>Bootstrap Theme Simply Me</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <style>
-  body {
-    font: 20px Montserrat, sans-serif;
-    line-height: 1.8;
-    color: #f5f6f7;
-  }
-  p {font-size: 16px;}
-  .margin {margin-bottom: 45px;}
-  .bg-1 { 
-    background-color: #1abc9c; /* Green */
-    color: #ffffff;
-  }
-  .bg-2 { 
-    background-color: #474e5d; /* Dark Blue */
-    color: #ffffff;
-  }
-  .bg-3 { 
-    background-color: #ffffff; /* White */
-    color: #555555;
-  }
-  .bg-4 { 
-    background-color: #2f2f2f; /* Black Gray */
-    color: #fff;
-  }
-  .container-fluid {
-    padding-top: 70px;
-    padding-bottom: 70px;
-  }
-  .navbar {
-    padding-top: 15px;
-    padding-bottom: 15px;
-    border: 0;
-    border-radius: 0;
-    margin-bottom: 0;
-    font-size: 12px;
-    letter-spacing: 5px;
-  }
-  .navbar-nav  li a:hover {
-    color: #1abc9c !important;
-  }
-  </style>
-</head>
-<body>
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+  <ul class="navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link" style="color: rgb(255, 255, 255);" href="#">Login</a>
+    </li>
 
-  <nav class="navbar navbar-default">
-    <div class="container">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#">Login</a>
+    <li class="nav-item pointer">
+      <div (click)="scrollTo('section1')" class="nav-link" href="#section1">
+        Nativo
+        <ng-container *ngIf="currentSection === 'section1'"></ng-container>
       </div>
-      <div class="collapse navbar-collapse" id="myNavbar">
-        <ul class="nav navbar-nav navbar-right">
-    
-        </ul>
+    </li>
+    <li class="nav-item pointer">
+      <div (click)="scrollTo('section2')" class="nav-link" href="#section2">
+        Funtions
+        <ng-container *ngIf="currentSection === 'section2'"></ng-container>
+      </div>
+    </li>
+    <li class="nav-item pointer">
+      <div (click)="scrollTo('section3')" class="nav-link" href="#section3">
+        Program
+        <ng-container *ngIf="currentSection === 'section3'"></ng-container>
+      </div>
+    </li>
+    <li class="nav-item pointer">
+      <div (click)="scrollTo('section4')" class="nav-link" href="#section4">
+        Contact
+        <ng-container *ngIf="currentSection === 'section4'"></ng-container>
+      </div>
+    </li>
+    <li class="nav-item dropdown">
+      <div
+        class="container d-flex flex-column d-flex flex-row-reverse bd-highlight"
+      ></div>
+    </li>
+  </ul>
+</nav>
+<br />
+
+<div
+  id="parentDiv"
+  scrollSpy
+  [spiedTags]="['DIV']"
+  (sectionChange)="onSectionChange($event)"
+>
+  <!-- SECTION 1 -->
+  <div id="section1">
+    <div
+      class="bg-img1 position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light"
+    >
+      <div class="text-block">
+        <img src="../../../assets/dist/img/NativoLogo.png" />
+        <h1 class="display-4 font-weight-normal" style="font-size: 90px;">
+          NATIVO
+        </h1>
+        <p class="lead font-weight-normal">
+          Native a web platform designed to create and train your entire company
+          with different activities that you can create based on your needs.
+        </p>
+        <a class="btn btn-outline-secondary" href="#">Coming soon</a>
       </div>
     </div>
-  </nav>
+  </div>
+  <!-- SECTION 2 -->
+  <div id="section2">
+    <br />
 
-<!-- First Container -->
-<div class="container-fluid bg-1 text-center">
-  <h3 class="margin">Who Am I?</h3>
-  <img src="../../../assets/dist/img/user-demo.png" class="img-responsive img-circle margin" style="display:inline" alt="Bird" width="350" height="350">
-  <h3>I'm an adventurer</h3>
-</div>
-
-<!-- Second Container -->
-<div class="container-fluid bg-2 text-center">
-  <h3 class="margin">What Am I?</h3>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-  <a href="#" class="btn btn-default btn-lg">
-    <span class="glyphicon glyphicon-search"></span> Search
-  </a>
-</div>
-
-<!-- Third Container (Grid) -->
-<div class="container-fluid bg-3 text-center">    
-  <h3 class="margin">Where To Find Me?</h3><br>
-  <div class="row">
-    <div class="col-sm-4">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      <img src="../../../assets/dist/img/user-demo.png" class="img-responsive margin" style="width:100%" alt="Image">
+    <div class="bg-img2 album py-5 bg-light">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <div class="card mb-4 shadow-sm">
+              <div>
+                <img
+                  class="img1"
+                  src="../../../assets/dist/img/Creationprogram.png"
+                  alt=""
+                />
+              </div>
+              <div class="card-body">
+                <h4>Create program</h4>
+                <p class="card-text">
+                  This function allows us to create a new program, this includes
+                  the name of the program, a description and even allows us to
+                  upload an image in order to more easily identify the company
+                  corresponding to this new training program from the platform's
+                  demo user.
+                </p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group"></div>
+                  <small class="text-muted">Creation/create program</small>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card mb-4 shadow-sm">
+              <div>
+                <img
+                  class="img1"
+                  src="../../../assets/dist/img/Activitiesweekly.png"
+                  alt=""
+                />
+              </div>
+              <div class="card-body">
+                <h4>Active programs</h4>
+                <p class="card-text">
+                  This function allows us to view the total number of active or
+                  available programs on the platform, here we can view the
+                  tutor, number of activities and their priority.
+                </p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group"></div>
+                  <small class="text-muted">Program/all programs</small>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card mb-4 shadow-sm">
+              <div>
+                <img
+                  class="img1"
+                  src="../../../assets/dist/img/Activitiesdaily.png"
+                  alt=""
+                />
+              </div>
+              <div class="card-body">
+                <h4>Daily activities</h4>
+                <p class="card-text">
+                  This function allows us to view the active daily tasks to be
+                  solved by the user. In this field, each activity can be solved
+                  using the multiple selection option.
+                </p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group"></div>
+                  <small class="text-muted">Daily/ Activity daily</small>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="col-sm-4"> 
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      <img src="../../../assets/dist/img/user-demo.png" class="img-responsive margin" style="width:100%" alt="Image">
+  </div>
+  <!-- SECTION 3 -->
+  <div id="section3">
+    <div
+      class="bg-img3 cover-container d-flex p-3 mx-auto flex-column text-center"
+      style="background-color: rgb(63, 95, 138);"
+    >
+      <main role="main" class="inner cover">
+        <div class="bg-text">
+          <h1>Nativo</h1>
+          <p>
+            The idea was born moments after all this problems started with the
+            COVID 19 virus, when seeing that most of the companies or schools
+            use directed platforms to make video calls or for entertainment, in
+            this way the idea of ​​mounting a web platform that provides the
+            necessary tools for the creation of project or activities that would
+            later be resolved by the end users of each entity, from the
+            beginning the plan was always able to have the necessary tools for
+            the control and management of each user and be able to measure the
+            progress of each of these.
+          </p>
+        </div>
+      </main>
     </div>
-    <div class="col-sm-4"> 
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      <img src="../../../assets/dist/img/user-demo.png" class="img-responsive margin" style="width:100%" alt="Image">
+  </div>
+  <!-- SECTION 4 -->
+  <div id="section4">
+    <div
+      class="bg-img4 position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light"
+    >
+      <section class="content">
+        <!-- Default box -->
+
+        <div class="card-body pb-0">
+          <div class="row d-flex align-items-stretch">
+            <div class="col-12 col-sm-6 col-md-4 d-flex align-items-stretch">
+              <div class="card bg-light">
+                <div class="card-header text-muted border-bottom-0">
+                  Nativo
+                </div>
+                <div class="card-body pt-0">
+                  <div class="row">
+                    <div class="col-7">
+                      <h2 class="lead"><b>Mauricio Drada</b></h2>
+                      <p class="text-muted text-sm">
+                        <b>About: </b> Web Stack programming / DV / Web Designer
+                        / Dj Lover
+                      </p>
+                      <ul class="ml-4 mb-0 fa-ul text-muted">
+                        <li class="small">
+                          <span class="fa-li"
+                            ><i class="fas fa-lg fa-building"></i
+                          ></span>
+                          Address: Demo Street 123 - 435, Demo City 04312, NJ
+                        </li>
+                        <br />
+                        <li class="small">
+                          <span class="fa-li"
+                            ><i class="fas fa-lg fa-phone"></i
+                          ></span>
+                          Phone #: + 057 - 310 284 19 94
+                        </li>
+                      </ul>
+                    </div>
+                    <div class="col-5 text-center">
+                      <img
+                        src="../../../assets/dist/img/Drada.png"
+                        alt=""
+                        class="img-fluid"
+                      />
+                    </div>
+                  </div>
+                </div>
+                <div class="card-footer">
+                  <div class="text-right">
+                    <a
+                      href="https://api.whatsapp.com/send?phone=+573102841994"
+                      target="_blank"
+                      class="btn btn-sm bg-teal"
+                    >
+                      <i class="fas fa-comments"></i>
+                    </a>
+                    <a
+                      href="https://github.com/Mauricio-KND"
+                      target="_blank"
+                      class="btn btn-sm btn-primary"
+                    >
+                      <i class="fas fa-user"></i> View Profile
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 d-flex align-items-stretch">
+              <div class="card bg-light">
+                <div class="card-header text-muted border-bottom-0">
+                  Nativo
+                </div>
+                <div class="card-body pt-0">
+                  <div class="row">
+                    <div class="col-7">
+                      <h2 class="lead"><b>Samir Millan</b></h2>
+                      <p class="text-muted text-sm">
+                        <b>About: </b> Machine Learning / DV / Backend / Coffee
+                        Lover
+                      </p>
+                      <ul class="ml-4 mb-0 fa-ul text-muted">
+                        <li class="small">
+                          <span class="fa-li"
+                            ><i class="fas fa-lg fa-building"></i
+                          ></span>
+                          Address: Demo Street 123, Demo City 04312, NJ
+                        </li>
+                        <br />
+                        <li class="small">
+                          <span class="fa-li"
+                            ><i class="fas fa-lg fa-phone"></i
+                          ></span>
+                          Phone #: + 057 - 305 925 90 29
+                        </li>
+                      </ul>
+                    </div>
+                    <div class="col-5 text-center">
+                      <img
+                        src="../../../assets/dist/img/Millan.png"
+                        alt=""
+                        class="img-fluid"
+                      />
+                    </div>
+                  </div>
+                </div>
+                <div class="card-footer">
+                  <div class="text-right">
+                    <a
+                      href="https://api.whatsapp.com/send?phone=+573059259029"
+                      target="_blank"
+                      class="btn btn-sm bg-teal"
+                    >
+                      <i class="fas fa-comments"></i>
+                    </a>
+                    <a
+                      href="https://github.com/Gaspela04"
+                      target="_blank"
+                      class="btn btn-sm btn-primary"
+                    >
+                      <i class="fas fa-user"></i> View Profile
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 d-flex align-items-stretch">
+              <div class="card bg-light">
+                <div class="card-header text-muted border-bottom-0">
+                  Nativo
+                </div>
+                <div class="card-body pt-0">
+                  <div class="row">
+                    <div class="col-7">
+                      <h2 class="lead"><b>Diego Quijano</b></h2>
+                      <p class="text-muted text-sm">
+                        <b>About: </b> Machine Learning / DV / Backend / Coffee
+                        Lover
+                      </p>
+                      <ul class="ml-4 mb-0 fa-ul text-muted">
+                        <li class="small">
+                          <span class="fa-li"
+                            ><i class="fas fa-lg fa-building"></i
+                          ></span>
+                          Address: Demo Street 123, Demo City 04312, NJ
+                        </li>
+                        <br />
+                        <li class="small">
+                          <span class="fa-li"
+                            ><i class="fas fa-lg fa-phone"></i
+                          ></span>
+                          Phone #: + 057 - 312 781 49 08
+                        </li>
+                      </ul>
+                    </div>
+                    <div class="col-5 text-center">
+                      <img
+                        src="../../../assets/dist/img/Quijano.png"
+                        alt=""
+                        class="img-fluid"
+                      />
+                    </div>
+                  </div>
+                </div>
+                <div class="card-footer">
+                  <div class="text-right">
+                    <a
+                      href="https://api.whatsapp.com/send?phone=+573127814908"
+                      target="_blank"
+                      class="btn btn-sm bg-teal"
+                    >
+                      <i class="fas fa-comments"></i>
+                    </a>
+                    <a
+                      href="https://github.com/diego0096"
+                      target="_blank"
+                      class="btn btn-sm btn-primary"
+                    >
+                      <i class="fas fa-user"></i> View Profile
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- /.card-body -->
+      </section>
     </div>
   </div>
 </div>
-
-<!-- Footer -->
-<footer class="container-fluid bg-4 text-center">
-  <p>Bootstrap Theme Made By <a href="https://www.w3schools.com">www.w3schools.com</a></p> 
-</footer>
-
-</body>
-</html>
