--- a/Nativo/frontend/src/app/pages/landing/landing.component.html
+++ b/Nativo/frontend/src/app/pages/landing/landing.component.html
@@ -12,20 +12,26 @@
     </li>
     <li class="nav-item pointer">
       <div (click)="scrollTo('section2')" class="nav-link" href="#section2">
-        Funtions
+        Time line
         <ng-container *ngIf="currentSection === 'section2'"></ng-container>
       </div>
     </li>
     <li class="nav-item pointer">
       <div (click)="scrollTo('section3')" class="nav-link" href="#section3">
-        Program
+        Funtions
         <ng-container *ngIf="currentSection === 'section3'"></ng-container>
       </div>
     </li>
     <li class="nav-item pointer">
       <div (click)="scrollTo('section4')" class="nav-link" href="#section4">
-        Contact
+        Program
         <ng-container *ngIf="currentSection === 'section4'"></ng-container>
+      </div>
+    </li>
+    <li class="nav-item pointer">
+      <div (click)="scrollTo('section5')" class="nav-link" href="#section5">
+        Contact
+        <ng-container *ngIf="currentSection === 'section5'"></ng-container>
       </div>
     </li>
     <li class="nav-item dropdown">
@@ -61,8 +67,23 @@
       </div>
     </div>
   </div>
-  <!-- SECTION 2 -->
+<!-- SECTION 2 -->
   <div id="section2">
+    <div
+      class="bg-img5 cover-container d-flex p-3 mx-auto flex-column text-center"
+      style="background-color: rgb(63, 95, 138);"
+    >
+      <div class="text-block1">
+        <h1 class="display-4 font-weight-normal" style="font-size: 50px;">
+          NATIVO
+        </h1>
+        <img src="../../../assets/dist/img/maxresdefault.jpg">
+      </div>
+    </div>
+  </div>
+
+  <!-- SECTION 3 -->
+  <div id="section3">
     <br />
 
     <div class="bg-img2 album py-5 bg-light">
@@ -143,32 +164,27 @@
       </div>
     </div>
   </div>
-  <!-- SECTION 3 -->
-  <div id="section3">
+  <!-- SECTION 4 -->
+  <div id="section4">
     <div
       class="bg-img3 cover-container d-flex p-3 mx-auto flex-column text-center"
       style="background-color: rgb(63, 95, 138);"
     >
-      <main role="main" class="inner cover">
-        <div class="bg-text">
-          <h1>Nativo</h1>
-          <p>
-            The idea was born moments after all this problems started with the
-            COVID 19 virus, when seeing that most of the companies or schools
-            use directed platforms to make video calls or for entertainment, in
-            this way the idea of ​​mounting a web platform that provides the
-            necessary tools for the creation of project or activities that would
-            later be resolved by the end users of each entity, from the
-            beginning the plan was always able to have the necessary tools for
-            the control and management of each user and be able to measure the
-            progress of each of these.
-          </p>
-        </div>
-      </main>
+      <div class="text-block">
+        <h1 class="display-4 font-weight-normal" style="font-size: 50px;">
+          NATIVO
+        </h1>
+        <iframe
+          width="920"
+          height="515"
+          src="https://www.youtube.com/embed/tgbNymZ7vqY"
+        >
+        </iframe>
+      </div>
     </div>
   </div>
-  <!-- SECTION 4 -->
-  <div id="section4">
+  <!-- SECTION 5 -->
+  <div id="section5">
     <div
       class="bg-img4 position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light"
     >
