--- a/Nativo/frontend/src/app/pages/landing/landing.component.html
+++ b/Nativo/frontend/src/app/pages/landing/landing.component.html
@@ -170,9 +170,9 @@
       class="bg-img3 cover-container d-flex p-3 mx-auto flex-column text-center"
       style="background-color: rgb(63, 95, 138);"
     >
-      <div class="text-block">
+      <div class="text-block3">
         <h1 class="display-4 font-weight-normal" style="font-size: 50px;">
-          NATIVO
+          <!-- NATIVO -->
         </h1>
         <iframe
           width="920"
