--- a/Nativo/frontend/src/styles.css
+++ b/Nativo/frontend/src/styles.css
@@ -201,3 +201,16 @@ a + a {
   border: 8px solid #f1f1f1;
  
 }
+
+.text-block3 {
+  position: absolute;
+  padding: 40px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  /* background-color: rgb(96,96,96); */
+  border-radius: 15px;
+  color: rgb(255, 255, 255);
+  border: 8px solid #f1f1f1;
+ 
+}
