--- a/Nativo/frontend/src/styles.css
+++ b/Nativo/frontend/src/styles.css
@@ -180,7 +180,7 @@ a + a {
   background-image: url("../src/assets/dist/img/164924335-white-wallpapers.png");
 
   /* Control the height of the image */
-  min-height: 1150px;
+  min-height: 11ng50px;
 
   /* Center and scale the image nicely */
   background-position: center;
