--- a/Nativo/frontend/src/app/pages/landing/landing.component.html
+++ b/Nativo/frontend/src/app/pages/landing/landing.component.html
@@ -67,17 +67,15 @@
       </div>
     </div>
   </div>
-<!-- SECTION 2 -->
+  <!-- SECTION 2 -->
   <div id="section2">
     <div
       class="bg-img5 cover-container d-flex p-3 mx-auto flex-column text-center"
       style="background-color: rgb(63, 95, 138);"
     >
       <div class="text-block1">
-        <h1 class="display-4 font-weight-normal" style="font-size: 50px;">
-          
-        </h1>
-        <img src="../../../assets/dist/img/timeline.jpg">
+        <h1 class="display-4 font-weight-normal" style="font-size: 50px;"></h1>
+        <img src="../../../assets/dist/img/timeline.jpg" />
       </div>
     </div>
   </div>
@@ -177,9 +175,10 @@
         <iframe
           width="920"
           height="515"
-          src="https://www.youtube.com/embed/tgbNymZ7vqY"
+          src="https://www.youtube.com/embed/QBjjU4r4u_0"
         >
         </iframe>
+        
       </div>
     </div>
   </div>
